--- a/src/app/components/IFrameCommunication/_style.scss
+++ b/src/app/components/IFrameCommunication/_style.scss
@@ -7,13 +7,10 @@
     flex-direction: column;
     align-content: center;
     justify-content: space-between;
-    width: 33vw;
-    margin: px2rem(100) auto;
-    min-height: px2rem(100);
 
     iframe {
-        border: 1px solid grey;
-        padding: px2rem(20);
+        height: 100vh;
+        width: 100%;
     }
 
     & > * {
