--- a/src/app/components/IFrameCommunication/_style.scss
+++ b/src/app/components/IFrameCommunication/_style.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-content: center;
     justify-content: space-between;
+    margin-bottom: 20px;
 
     iframe {
         height: 100vh;
@@ -16,4 +17,10 @@
     & > * {
         flex-grow: 0;
     }
+}
+
+.iframe-wrapper {
+    @extend .iframe-demo-row;
+    width: 90%;
+    margin: 0 auto;
 }
